# dissipationIFR

./: .gitignore  README.md  environment.yml  pyproject.toml
dissipationIFR/: __init__.py  interactive.py  load_and_convert.py  plots.py  tools.py  utilities.py
dissipationIFR/config/: __init__.py  glider_data.yml  variables.py
notebooks/: load_and_convert.ipynb
